Switch to globalSettings first. The reload. Fixes a crash when  going back to systemsettings and clicking "discard changes".

BUG:177008

svn path=/trunk/KDE/kdebase/workspace/; revision=969321